--- a/toi/localisation/english/arabia_l_english.yml
+++ b/toi/localisation/english/arabia_l_english.yml
@@ -30,7 +30,7 @@
  arab_events.9.d: "Much of our Territories in Arabia are under control by [ENG.GetNameDef]. how do you want to approach our claims to them?"
  arab_events.9.a: "Maintain Our Claims"
  arab_events.9.b: "Demand return of [TCS.GetNameDef] territories"
- arab_events.9.c: "the [TCS.GetNameDef] are lost to us"
+ arab_events.9.c: "The [TCS.GetNameDef] are lost to us"
  arab_events.10.t: "[OMA.GetName] Demands [TCS.GetName]"
  arab_events.10.d: "A diplomat from the resurgent [OMA.GetNameDef] has arrived to demand the return of the Trucial States. [OMA.GetName] may be small but their navy may prevent supplies arriving to our forces keeping the peace in India"
  arab_events.10.b: "Return the land, it is useless anyway"
@@ -48,7 +48,7 @@
  arab_events.18.a: "Take no chances, Send the troops in"
  arab_events.18.b: "Demand the return of the State"
  arab_events.18.c: "Demand Vassalization"
- arab_events.18.d: "the Rulers within [559.GetName] have long paid tribute to us but now it is the time to consolidate our hold over the region, how shall we proceed?"
+ arab_events.18.d: "The Rulers within [559.GetName] have long paid tribute to us but now it is the time to consolidate our hold over the region, how shall we proceed?"
  arab_events.19.t: "Oman Demands Submission"
  arab_events.19.d: "A Envoy has arrived from the Sultan of [OMA.GetName] Demanding we return to being their protectorate. What should our response be?"
  arab_events.19.a: "Agree"
@@ -57,7 +57,7 @@
  arab_events.21.a: "Take no chances, Send the troops in"
  arab_events.21.b: "Demand the return of the State"
  arab_events.21.c: "Demand Vassalization"
- arab_events.21.d: "the Rulers within [821.GetName] have long paid tribute to us but now it is the time to consolidate our hold over the region, how shall we proceed?"
+ arab_events.21.d: "The Rulers within [821.GetName] have long paid tribute to us but now it is the time to consolidate our hold over the region, how shall we proceed?"
  arab_events.23.t: "Our position on [ENG.GetName]?"
  arab_events.23.a: "Remain Friendly"
  arab_events.23.b: "Become Neutral"
@@ -210,11 +210,11 @@
  arab_events.76.a: "Send in a Gunboat"
  OMA_hinawi_in_government: "Hināwī in Government"
  OMA_ghafiri_in_government: "Ghāfirī in Government"
- OMA_Ghafiri_gives_support: "the Ghāfirī giving Support"
- OMA_Ghafiri_backs_azzan: "the Ghāfirī giving backing to Azzan"
- OMA_Ghafiri_remains_neutral: "the Ghāfirī remain Neutral"
- OMA_Hinawi_gives_support: "the Hināwī giving Support"
- OMA_Hinwai_backs_azzan: "the Hināwī giving backing to Azzan"
+ OMA_Ghafiri_gives_support: "The Ghāfirī giving Support"
+ OMA_Ghafiri_backs_azzan: "The Ghāfirī giving backing to Azzan"
+ OMA_Ghafiri_remains_neutral: "The Ghāfirī remain Neutral"
+ OMA_Hinawi_gives_support: "The Hināwī giving Support"
+ OMA_Hinwai_backs_azzan: "The Hināwī giving backing to Azzan"
  OMA_paying_the_hinawi: "Paying the Hināwī Tribe"
  OMA_paying_the_ghafiri: "Paying the Ghāfirī Tribe"
  OMA_lost_MAH_war: "§YOman§!: Lost the Mahra War"
