--- a/toi/localisation/english/australia_l_english.yml
+++ b/toi/localisation/english/australia_l_english.yml
@@ -16,7 +16,7 @@
  AST_Convict_Labour_desc: "This Colony, like many others on the eastern side of this land are built on top the back breaking work of England's trouble makers; or 'Convicts' as people call them. We will keep accepting them to build up this colony as long as we need it...However the other colonies are starting to look for ways to end our supply of free labour, and Britain...is starting to show signs that its thinking of it."
  
  AST_eureka: "Effects of The Eureka Stockade"
- AST_eureka_desc: "the 1854 rebellion over the miner's License fee that was introduced lead to the miner's rebelling against us over the tax for having the license without having any representation, along with many other factors lead to an armed response by us to quell the miner's. Even thou we won, the after math has stung us in a harder way with many of the miner's demands been accepted."
+ AST_eureka_desc: "The 1854 rebellion over the miner's License fee that was introduced lead to the miner's rebelling against us over the tax for having the license without having any representation, along with many other factors lead to an armed response by us to quell the miner's. Even thou we won, the after math has stung us in a harder way with many of the miner's demands been accepted."
  
  AST_unexplored_lands: "Unexplored Regions"
  AST_unexplored_lands_desc: "Vast regions of our land are currently unexplored. This means we do not know how many resources, how much wealth, or how many potential city sites exist in much of our claimed land."
