--- a/toi/localisation/english/canada_l_english.yml
+++ b/toi/localisation/english/canada_l_english.yml
@@ -341,7 +341,7 @@
  CAN_Independent_Failed: "War Of Independence Failed"
 ##Events
  britishcanada.1.t: "A Maritime Union?"
- britishcanada.1.d: "There has been debate about a proposed maritime union between Nova Scotia and New Brunswick lately. It is seen by a few as \"the first step towards sovereignity" for Canada, although for now it would just be a regional union. What do we say?"
+ britishcanada.1.d: "There has been debate about a proposed maritime union between Nova Scotia and New Brunswick lately. It is seen by a few as \"The first step towards sovereignity" for Canada, although for now it would just be a regional union. What do we say?"
  britishcanada.1.a: "We should hold a conference about this."
  britishcanada.1.b: "No, we should remain as sovereign as we are now."
  britishcanada.2.t: "A Maritime Union?"
