--- a/toi/localisation/english/hol_l_english.yml
+++ b/toi/localisation/english/hol_l_english.yml
@@ -44,9 +44,9 @@
  HOL_elections_1860: "The elections of 1860"
  HOL_early_elections: "Early elections"
  HOL_election_campaigns: "Election campaigns"
- HOL_onderwijswet_1857: "the Onderwijswet of 1857"
+ HOL_onderwijswet_1857: "The Onderwijswet of 1857"
  HOL_ministry_marine: "Ministry of Marine"
- HOL_ministry_war_budget: "the Ministry of War budget"
+ HOL_ministry_war_budget: "The Ministry of War budget"
  HOL_replace_forstner: "Replace Forstner"
  HOL_keep_forstner: "Keep Forstner"
  HOL_make_do: "Make do with a restrictive budget"
@@ -56,7 +56,7 @@
  HOL_ministry_internal: "Ministry of Internal affairs"
  HOL_ministry_financial: "Ministry of Financial affairs"
  HOL_ministry_colonies: "Ministry of colonies"
- HOL_ministry_religious: "the Religious Ministries"
+ HOL_ministry_religious: "The Religious Ministries"
  HOL_ministry_foreign: "Ministry of Foreign affairs"
   HOL_catholic_ministry: "Ministry of Catholic affairs"
  HOL_protestant_ministry: "Ministry of Reformed and Other Worship Services"
