--- a/toi/localisation/english/ottoman_l_english.yml
+++ b/toi/localisation/english/ottoman_l_english.yml
@@ -126,7 +126,7 @@
  OTO_mac_fund_import_food_desc: ""
  OTO_mac_end_grain_crisis: "Resolve the Grain Crisis"
  OTO_mac_end_grain_crisis_desc: ""
- OTO_mac_defense_balkans: "the Defense of the Balkans"
+ OTO_mac_defense_balkans: "The Defense of the Balkans"
  OTO_mac_defense_balkans_desc: ""
  prizren_league_exists: "§YPrizren League§!: Exists"
  prizren_league_not_exists: "§YPrizren League§!: Has been brought to Heel"
