--- a/toi/localisation/english/spain_l_english.yml
+++ b/toi/localisation/english/spain_l_english.yml
@@ -612,7 +612,7 @@ SPR_6dy_mantaining_order: "Maintaining Order"
 SPR_6dy_disarmed_liberty_volunteers: "Disarm the Liberty Volunteers"
 SPR_find_a_king_first_tt: "Spain must have a Candidate to be King in order to crown one."
 SPR_ready_to_crown: "We have a §6Candidate§! that can be §YCrowned§!."
-SPR_6dy_71_election: "the '71 Election"
+SPR_6dy_71_election: "The '71 Election"
 SPR_6dy_crowning_the_king: "Crowning the King"
 SPR_6dy_organic_judicial_law: "Organic Judicial Law"
 SPR_6dy_introduce_the_peseta: "Introduce the Peseta"
@@ -975,7 +975,7 @@ Spanish_American_War_Occured: "The §YSpanish-American War§! has Occured"
 SPR_south_american_war_PRU: "Invasion of Peru"
 SPR_south_american_war_CHL: "Invasion of Chile"
 SPR_south_american_war_full: "South American War"
-PRU_talambo_incident: "the §YTalambo Incident§! has §Yhappened§!"
+PRU_talambo_incident: "The §YTalambo Incident§! has §Yhappened§!"
 SPR_provisional_government: "Provisional Government"
 SPR_the_revolutionary_boards: "The Revolutionary Boards"
 SPR_freedom_volunteers: "Freedom Volunteers"
@@ -1013,10 +1013,10 @@ SPR_CUB_guerilla_warfare: "Guerilla Warfare"
 SPR_anger_federalists_tt: "This action may §Ranger§! the §CFederal Republicans§!"
 SPR_sold_pervian_guano_flag: "[376.GetName] Guano rights sold"
 SPR_metric_system_adopted: "Has officiallised the §YMetric System§!"
-SPR_third_carlist_war: "the §YThird Carlist War§! is ongoing"
-SPR_federalist_uprising: "the §YFederatlist Rebellion§! is ongoing"
-SPR_cantonist_uprising: "the §YCantonist Revolution§! is ongoing"
-SPR_petrolum_revolution: "the §YPetrolum Revolution§! is ongoing"
+SPR_third_carlist_war: "The §YThird Carlist War§! is ongoing"
+SPR_federalist_uprising: "The §YFederatlist Rebellion§! is ongoing"
+SPR_cantonist_uprising: "The §YCantonist Revolution§! is ongoing"
+SPR_petrolum_revolution: "The §YPetrolum Revolution§! is ongoing"
 SPR_not_in_crisis_tt: "§Y[SPR.GetName]§! is not dealing with a Pressing Conflict"
 
 eoanb_decision_establish_cambodian_protectorate: "Establish Cambodian Protectorate"
