--- a/toi/localisation/english/sweden_l_english.yml
+++ b/toi/localisation/english/sweden_l_english.yml
@@ -698,7 +698,7 @@
  eoanb_sweden.57.a: "Railways are the future."
  
  eoanb_sweden.58.t: "The Göteborg-Alingsås-Vårgårda Railway Line Opens Service"
- eoanb_sweden.58.d: "Today the Western Main Line opened service between Göteborg, Alingsås and Vårgårda. These first 66.2 kilometers of the railway has been marked by difficult terrain with lakes and valleys requiring costly constructions to overcome them. Mr Ericson himself wrote in a report to us that the Jonsered-Alingsås part is "the most expensive and labor-intensive part of the Western Main line between Göteborg and the capital in terms of length”.\n\nWith this difficult part now behind us we are making good progress out on the plains of Västergötland and expect to reach Falköping in October the next year."
+ eoanb_sweden.58.d: "Today the Western Main Line opened service between Göteborg, Alingsås and Vårgårda. These first 66.2 kilometers of the railway has been marked by difficult terrain with lakes and valleys requiring costly constructions to overcome them. Mr Ericson himself wrote in a report to us that the Jonsered-Alingsås part is "The most expensive and labor-intensive part of the Western Main line between Göteborg and the capital in terms of length”.\n\nWith this difficult part now behind us we are making good progress out on the plains of Västergötland and expect to reach Falköping in October the next year."
  eoanb_sweden.58.a: "Great news!"
  
  eoanb_sweden.59.t: "The Lund-Höör and the Vårgårda-Herrljunga-Falköping Railway Lines Open Service"
