--- a/toi/localisation/english/tunisia_l_english.yml
+++ b/toi/localisation/english/tunisia_l_english.yml
@@ -83,7 +83,7 @@
   TUN_the_marseille_of_the_desert_desc: " Thanks to a commission of French engineers we will beable to make Tunis a modern capital "
 
   TUN_industrialize_the_country: " Industrialize the Country "
-  TUN_industrialize_the_country_desc: "the more industries we build the better we can manage our debts"
+  TUN_industrialize_the_country_desc: "The more industries we build the better we can manage our debts"
 
   TUN_the_monetary_issue: " The Monetary Issue "
   TUN_the_monetary_issue_desc: "We have an absourd amount of debts and we can't afford a default"
