--- a/toi/localisation/russian/countries_default_l_russian.yml
+++ b/toi/localisation/russian/countries_default_l_russian.yml
@@ -9719,7 +9719,7 @@
  SHX_traditional_conservatism_DEF: "Республика Шаньси" #NT!
  SHX_traditional_conservatism_ADJ: "Шаньси" #NT!
  SHX_chauvinist_populism: "Shanxi Yan State" #NT!
- SHX_chauvinist_populism_DEF: "the Shanxi Yan State" #NT!
+ SHX_chauvinist_populism_DEF: "The Shanxi Yan State" #NT!
  SHX_centrism: "Республика Шаньси" #NT!
  SHX_centrism_DEF: "Республика Шаньси" #NT!
  SHX_autocracy: "Шаньси" #NT!
@@ -11580,7 +11580,7 @@
  WYO_anarchism: "ВаЯо" #NT!
   WYO_chauvinist_populism: "Yao State 
   WYO_fundamentalism: "Yao Emirate 
-  WYO_centrism_DEF: "the Yao Republic 
+  WYO_centrism_DEF: "The Yao Republic 
  WYO_traditional_conservatism_DEF: "Республика Яо" #NT!
  WYO_social_egalitarianism_DEF: "Республика Яо" #NT!
  WYO_collectivist_socialism_DEF: "Народная Республика Яо" #NT!
