--- a/toi/localisation/russian/countries_l_russian.yml
+++ b/toi/localisation/russian/countries_l_russian.yml
@@ -1301,7 +1301,7 @@
  MEN_autocracy: "Mengjiang" #NT!
  MEN_autocracy_DEF: "Mengjiang" #NT!
  MEN_vanguard_communism: "People's Mengjiang" #NT!
- #  MEN_vanguard_communism_DEF: "the People's Mengjiang" #NT!
+ #  MEN_vanguard_communism_DEF: "The People's Mengjiang" #NT!
  MEN_chauvinist_populism_ADJ: "Mengjiang" #NT!
  MEN_centrism_ADJ: "Mengjiang" #NT!
  MEN_autocracy_ADJ: "Mengjiang" #NT!
