--- a/toi/localisation/english/countries_l_english.yml
+++ b/toi/localisation/english/countries_l_english.yml
@@ -1026,6 +1026,7 @@
  AFO_centrism: "Republic of Afghanistan"
  AFO_centrism_DEF: "The Republic of Afghanistan"
  AFO_autocracy: "Emirate of Herat"
+ AFO_autocracy_ADJ: "Herati"
  AFO_autocracy_DEF: "Afghanistan"
  AFO_vanguard_communism: "Democratic Republic of Afghanistan"
  AFO_vanguard_communism_DEF: "The Democratic Republic of Afghanistan"
@@ -4891,77 +4892,77 @@ MDV_centrism: "Maldives"
  HYD_autonomy_dominion_DEF: "The $OVERLORDADJ$ Dominion of Hyderabad"
  HYD_autonomy_dominion_ADJ: "Hyderabadi"
 
- KAS_centrism: "Kashmir"
- KAS_centrism_DEF: "The Republic of Kashmir"
+ KAS_centrism: "Jammu & Kashmir"
+ KAS_centrism_DEF: "The Republic of Jammu & Kashmir"
  KAS_centrism_ADJ: "Kashmiri"
- KAS_subject_centrism: "Kashmir"
- KAS_subject_centrism_DEF: "The Supervised Republic of Kashmir"
+ KAS_subject_centrism: "Jammu & Kashmir"
+ KAS_subject_centrism_DEF: "The Supervised Republic of Jammu & Kashmir"
  KAS_subject_centrism_ADJ: "Kashmiri"
- KAS_traditional_conservatism: "Kashmir"
- KAS_traditional_conservatism_DEF: "The Republic of Kashmir"
+ KAS_traditional_conservatism: "Jammu & Kashmir"
+ KAS_traditional_conservatism_DEF: "The Republic of Jammu & Kashmir"
  KAS_traditional_conservatism_ADJ: "Kashmiri"
- KAS_subject_traditional_conservatism: "Kashmir"
- KAS_subject_traditional_conservatism_DEF: "The Supervised Republic of Kashmir"
+ KAS_subject_traditional_conservatism: "Jammu & Kashmir"
+ KAS_subject_traditional_conservatism_DEF: "The Supervised Republic of Jammu & Kashmir"
  KAS_subject_traditional_conservatism_ADJ: "Kashmiri"
- KAS_social_egalitarianism: "Kashmir"
- KAS_social_egalitarianism_DEF: "The Social Republic of Kashmir"
+ KAS_social_egalitarianism: "Jammu & Kashmir"
+ KAS_social_egalitarianism_DEF: "The Social Republic of Jammu & Kashmir"
  KAS_social_egalitarianism_ADJ: "Kashmiri"
- KAS_subject_social_egalitarianism: "Kashmir"
- KAS_subject_social_egalitarianism_DEF: "The Social Republic of Kashmir"
+ KAS_subject_social_egalitarianism: "Jammu & Kashmir"
+ KAS_subject_social_egalitarianism_DEF: "The Social Republic of Jammu & Kashmir"
  KAS_subject_social_egalitarianism_ADJ: "Kashmiri"
- KAS_collectivist_socialism: "Kashmir"
- KAS_collectivist_socialism_DEF: "The Commune of Kashmir"
+ KAS_collectivist_socialism: "Jammu & Kashmir"
+ KAS_collectivist_socialism_DEF: "The Commune of Jammu & Kashmir"
  KAS_collectivist_socialism_ADJ: "Kashmiri"
- KAS_subject_collectivist_socialism: "Kashmir"
- KAS_subject_collectivist_socialism_DEF: "The Commune of Kashmir"
+ KAS_subject_collectivist_socialism: "Jammu & Kashmir"
+ KAS_subject_collectivist_socialism_DEF: "The Commune of Jammu & Kashmir"
  KAS_subject_collectivist_socialism_ADJ: "Kashmiri"
- KAS_vanguard_communism: "Kashmir"
- KAS_vanguard_communism_DEF: "The People's Republic of Kashmir"
+ KAS_vanguard_communism: "Jammu & Kashmir"
+ KAS_vanguard_communism_DEF: "The People's Republic of Jammu & Kashmir"
  KAS_vanguard_communism_ADJ: "Kashmiri"
- KAS_subject_vanguard_communism: "Kashmir"
+ KAS_subject_vanguard_communism: "Jammu & Kashmir"
  KAS_subject_vanguard_communism_DEF: "Kashmir Social State Republic"
  KAS_subject_vanguard_communism_ADJ: "Kashmiri"
- KAS_autocracy: "Kashmir"
- KAS_autocracy_DEF: "Kashmir"
+ KAS_autocracy: "Jammu & Kashmir"
+ KAS_autocracy_DEF: "Jammu & Kashmir"
  KAS_autocracy_ADJ: "Kashmiri"
- KAS_subject_autocracy: "Kashmir"
- KAS_subject_autocracy_DEF: "State of Kashmir"
+ KAS_subject_autocracy: "Jammu & Kashmir"
+ KAS_subject_autocracy_DEF: "State of Jammu & Kashmir"
  KAS_subject_autocracy_ADJ: "Kashmiri"
- KAS_fundamentalism: "Kashmir"
- KAS_fundamentalism_DEF: "Kashmir"
+ KAS_fundamentalism: "Jammu & Kashmir"
+ KAS_fundamentalism_DEF: "Jammu & Kashmir"
  KAS_fundamentalism_ADJ: "Kashmiri"
- KAS_subject_fundamentalism: "Kashmir"
- KAS_subject_fundamentalism_DEF: "Kashmir"
+ KAS_subject_fundamentalism: "Jammu & Kashmir"
+ KAS_subject_fundamentalism_DEF: "Jammu & Kashmir"
  KAS_subject_fundamentalism_ADJ: "Kashmiri"
- KAS_radical_democracy: "Kashmir"
- KAS_radical_democracy_DEF: "Kashmir"
+ KAS_radical_democracy: "Jammu & Kashmir"
+ KAS_radical_democracy_DEF: "Jammu & Kashmir"
  KAS_radical_democracy_ADJ: "Kashmiri"
- KAS_subject_radical_democracy: "Kashmir"
- KAS_subject_radical_democracy_DEF: "Kashmir"
+ KAS_subject_radical_democracy: "Jammu & Kashmir"
+ KAS_subject_radical_democracy_DEF: "Jammu & Kashmir"
  KAS_subject_radical_democracy_ADJ: "Kashmiri"
- KAS_chauvinist_populism: "Kashmir"
- KAS_chauvinist_populism_DEF: "Kashmir"
+ KAS_chauvinist_populism: "Jammu & Kashmir"
+ KAS_chauvinist_populism_DEF: "Jammu & Kashmir"
  KAS_chauvinist_populism_ADJ: "Kashmiri"
- KAS_subject_chauvinist_populism: "Kashmir"
- KAS_subject_chauvinist_populism_DEF: "Kashmir"
+ KAS_subject_chauvinist_populism: "Jammu & Kashmir"
+ KAS_subject_chauvinist_populism_DEF: "Jammu & Kashmir"
  KAS_subject_chauvinist_populism_ADJ: "Kashmiri"
- KAS_anarchism: "Kashmir"
- KAS_anarchism_DEF: "Kashmir"
+ KAS_anarchism: "Jammu & Kashmir"
+ KAS_anarchism_DEF: "Jammu & Kashmir"
  KAS_anarchism_ADJ: "Kashmiri"
- KAS_subject_anarchism: "Kashmir"
- KAS_subject_anarchism_DEF: "Kashmir"
+ KAS_subject_anarchism: "Jammu & Kashmir"
+ KAS_subject_anarchism_DEF: "Jammu & Kashmir"
  KAS_subject_anarchism_ADJ: "Kashmiri"
- KAS_autonomy_unincorporated: "Kashmir"
- KAS_autonomy_unincorporated_DEF: "$OVERLORDADJ$ Territory of Kashmir"
+ KAS_autonomy_unincorporated: "Jammu & Kashmir"
+ KAS_autonomy_unincorporated_DEF: "$OVERLORDADJ$ Territory of Jammu & Kashmir"
  KAS_autonomy_unincorporated_ADJ: "Kashmiri"
- KAS_autonomy_colony: "Kashmir"
- KAS_autonomy_colony_DEF: "The $OVERLORDADJ$ Colony of Kashmir"
+ KAS_autonomy_colony: "Jammu & Kashmir"
+ KAS_autonomy_colony_DEF: "The $OVERLORDADJ$ Colony of Jammu & Kashmir"
  KAS_autonomy_colony_ADJ: "$OVERLORDADJ$ Kashmiri"
- KAS_autonomy_organized_incorporated_territory: "Kashmir"
- KAS_autonomy_organized_incorporated_territory_DEF: "The $OVERLORDADJ$ Territory of Kashmir"
+ KAS_autonomy_organized_incorporated_territory: "Jammu & Kashmir"
+ KAS_autonomy_organized_incorporated_territory_DEF: "The $OVERLORDADJ$ Territory of Jammu & Kashmir"
  KAS_autonomy_organized_incorporated_territory_ADJ: "$OVERLORDADJ$ Kashmiri"
- KAS_autonomy_dominion: "Kashmir"
- KAS_autonomy_dominion_DEF: "The $OVERLORDADJ$ Dominion of Kashmir"
+ KAS_autonomy_dominion: "Jammu & Kashmir"
+ KAS_autonomy_dominion_DEF: "The $OVERLORDADJ$ Dominion of Jammu & Kashmir"
  KAS_autonomy_dominion_ADJ: "Kashmiri"
 
  KAR_centrism: "Karputhala"
