Sepoy Rebellion Peace Treaty

--- a/toi/localisation/english/india_l_english.yml
+++ b/toi/localisation/english/india_l_english.yml
@@ -475,9 +475,10 @@
  sepoy.5.t: "Hidden Event"
  sepoy.5.d: "Hidden Event"
  sepoy.5.a: "Hidden Event"
- sepoy.6.t: "Hidden Event"
- sepoy.6.d: "Hidden Event"
- sepoy.6.a: "Hidden Event"
+ sepoy.6.t: "Union of the Western Rajputs"
+ sepoy.6.d: "[RJP.GetLeader] has approached us to form a union of the Western Rajputs."
+ sepoy.6.a: "We shall join."
+ sepoy.6.b: "We will keep our banner."
  sepoy.7.t: "Under a Mughal Yoke"
  sepoy.7.d: "The lead group of the Sepoy Rebellion was consolidated around the Mughal Emperor, now the rebellion is victorious elements are pushing for a united Hindustani empire under the emperor. We must make a decision, one way or the other"
  sepoy.7.a: "Submit to the Mughals"
