--- a/toi/localisation/english/countries_cosmetic_l_english.yml
+++ b/toi/localisation/english/countries_cosmetic_l_english.yml
@@ -1133,7 +1133,7 @@
 
  GWA_maratha_confed: "Maratha Confederation"
  GWA_maratha_confed_DEF: "The Maratha Confederation"
- GWA_maratha_confedADJ: "Marathan"
+ GWA_maratha_confed_ADJ: "Marathan"
 
  SKH_empire: "Sikh Empire"
  SKH_empire_DEF: "The Sikh Empire"
