--- a/toi/localisation/russian/countries_cosmetic_l_russian.yml
+++ b/toi/localisation/russian/countries_cosmetic_l_russian.yml
@@ -1133,7 +1133,7 @@
   
  GWA_maratha_confed: "Конфедерация маратхов" #NT!
  GWA_maratha_confed_DEF: "Конфедерация маратхов" #NT!
- GWA_maratha_confedADJ: "марафан" #NT!
+ GWA_maratha_confed_ADJ: "марафан" #NT!
   
  SKH_empire: "Сикхская Империя" #NT!
  SKH_empire_DEF: "Сикхская Империя" #NT!
