--- a/toi/localisation/english/france_l_english.yml
+++ b/toi/localisation/english/france_l_english.yml
@@ -535,6 +535,7 @@ FRA_SE_portrait_9_desc_text: "Jean-Baptiste Philibert\n Neutral Bonapartist"
  FRA_mission_caen_cherbourg_rail: "Caen-Cherbourg Railway"
  FRA_Villafranca_accept_tooltip: "\n§YWe will propose an armistice with§! §O[AUS.GetNameWithFlag]§!§Y.\n\nThe terms will be as follows:\n -§!§3[FRA.GetNameWithFlag]§! §Yannexes§! §C[159.GetName]§!§Y.§!"
  FRA_Lombardia_transfer_tooltip: "\n§b[PIE.GetNameWithFlag]§! §Yannexes§! §C[159.GetName]§!§Y.§!"
+ FRA_war_continues_tooltip: "\n§RThe war continues.§!"
  
 ##################################################
 #                     DECISIONS
@@ -928,6 +929,7 @@ FRA_SE_portrait_9_desc_text: "Jean-Baptiste Philibert\n Neutral Bonapartist"
  nap_france_flavor.42.t: "Armistice of Villafranca"
  nap_france_flavor.42.d: "With §O[AUS.GetNameWithFlag]§! being pushed back to Mantua, it may be risky to continue advancing past §C[159.GetName]§!. A continued march may spark war with the German Confederation, a risk that we don't want to take. Also, the Concordat of 1801 is still in effect, forcing us to uphold the sovereignty of the Pope. Our continued presence in the war could implicate us in threatening the independence of §S[PAP.GetNameWithFlag]§!. For these reasons, it would be best to send an offer of armistice to §O[AUS.GetNameWithFlag]§!."
  nap_france_flavor.42.a: "Send them the armistice."
+ nap_france_flavor.42.b: "We won't settle for half."
  nap_france_flavor.43.t: "Transferring Lombardy to Sardinia"
  nap_france_flavor.43.d: "With our victory in the Second War of Independence, §O[AUS.GetNameWithFlag]§! has ceded us the territory of §C[159.GetName]§!. This was clearly a petty act against §b[PIE.GetNameWithFlag]§!, so we shall cede them their rightful territory."
  nap_france_flavor.43.a: "Why would we keep this..?"
