--- a/toi/localisation/english/alerts_l_english.yml
+++ b/toi/localisation/english/alerts_l_english.yml
@@ -2,7 +2,7 @@
  ALERT_RIGHTCLICK: "§GRight-click to dismiss§!"
  ALERT_RIGHTCLICK_REPORT: "§GRight-click to dismiss§!. This will also dismiss all unread on-map reports of this type."
  alert_hostile_troops_instant: "§RHostile Troop§!"
- alert_hostile_troops_delayed: "There are hostile troops present in the garrisoned area."
+ alert_hostile_troops_delayed: "There are hostile troops present in the defended area."
  alert_naval_invasion_instant: "§RNaval Invasion§!"
  alert_naval_invasion_delayed: "§TThere are enemy naval invasions targeting these states:§!"
  alert_naval_invasion_delayed_state: "$STATE|H$"
@@ -18,7 +18,7 @@
  alert_base_low_supply_delayed: "Supply in this area is not enough and this is impacting Naval and Air bases. Any missions run from them will be less efficient."
  alert_base_very_low_supply_instant: "§RBases in Very Low Supply§!"
  alert_base_very_low_supply_delayed: "Supply in this area is not enough and this is impacting Naval and Air bases. Any missions run from them will be less efficient."
- LOW_SUPPLIES_TIPS: "§GTo improve the situation you can do one of the following:\n - Spread out or move your units away to reduce the local consumption.\n - Build higher level infrastructure and make sure there are no bottlenecks from the capital.\nIf delivered by sea, also:\n - Build higher naval port levels in source and destination provinces.\n - Make sure you have built enough convoys.\n - Make sure you escort convoys with 'Convoy escort' naval mission along the route. The delivery efficiency may drop when enemies often sink your convoys.§!"
+ LOW_SUPPLIES_TIPS: "The following actions may help you resolve the situation:\n - Spread out or reassign your units to reduce local consumption.\n\n - Build higher level infrastructure and make sure there are no railway bottlenecks from the capital.\n\n - If you have enough trucks, you can motorize hubs in the region, giving them increased supply cap and range.\n\nIf supply in the area is being delivered by sea, you can also:\n - Upgrade the level of naval bases in source and destination provinces.\n\n - Make sure you have built enough convoys.\n\n - Make sure you escort convoys with 'Convoy escort' naval mission along the route. The delivery efficiency may drop if convoys are sunk."
  alert_no_research_instant: "§YResearch Slot Available§!"
  alert_no_research_delayed: "You have $COUNT|Y$ Research Slot(s) available."
  alert_no_goal_instant: "§HNo Active Goal§!"
@@ -31,14 +31,15 @@
  alert_production_no_template_equipments: "§TEquipment being produced without a template:§!"
  alert_non_payed_license_instant: "§HNot Paid Licenses§!"
  alert_non_payed_license_delayed: "There are countries not lending civilian factories for licensed production:\n$LIST$§GRight-click to dismiss§!"
- alert_industrial_org_sizeup_instant: "§HUnlock traits in Military Industrial Organisations§!"
- alert_industrial_org_sizeup_delayed: "You can unlock traits for the following Military Industrial Organisations:\n$LIST$§GRight-click to dismiss§!"
  alert_decision_new_instant: "§HDecisions Available§!"
  alert_decision_new_delayed: "Next decisions are ready to be taken:\n$LIST$§GRight-click to dismiss§!"
  alert_decision_new_delayed_more: "...and $COUNT|H$ more."
  alert_decision_timeout_instant: "§HEvents or Decisions Timeout§!"
- alert_decision_timeout_delayed: "Next events and decisions are about to timeout:\n$LIST$§GRight-click to dismiss§!"
- TIMEOUT_ITEM_LOC: "$NAME|H$ ($DAYS|H0$ §Hdays left§!)"
+ alert_decision_timeout_delayed: "These events or decisions are about to time out:\n$LIST$§GRight-click to dismiss§!"
+ alert_bop_timeout_delayed: "These Balance of Power events or decisions are about to time out:\n$LIST$§GRight-click to dismiss§!"
+ alert_industrial_org_sizeup_instant: "§HUnlock traits in Military Industrial Organisations§!"
+ alert_industrial_org_sizeup_delayed: "You can unlock traits for the following Military Industrial Organisations:\n$LIST$§GRight-click to dismiss§!"
+ TIMEOUT_ITEM_LOC: " - $NAME|H$ ($DAYS|H0$ §Hdays left§!)"
  alert_free_civilian_factories_instant: "§HFree Civilian Factories§!"
  alert_free_civilian_factories_delayed: "§TYou have free Civilian Factories to use for trade and building constructions.§!"
  alert_free_military_factories_instant: "§HFree Military Factories§!"
@@ -47,7 +48,9 @@
  alert_free_naval_dockyards_delayed: "§TYou have free Dockyards to use for producing ships.§!"
  alert_pick_new_idea_instant: "§HModify government§!"
  alert_pick_new_idea_delayed: "§TYou can change:§!"
+ alert_pick_new_idea_delayed_bop: "§TBalance of Power:§!"
  alert_pick_new_idea_group_type: "$TYPE|H$"
+ alert_pick_new_idea_advisor_delayed: "You can select a:\n$ADVISOR|Y$\n"
  alert_available_wargoal_instant: "§HAvailable war goal§!"
  alert_enemy_generate_wargoal_instant: "§HThere is justification of war goals against us or allies§!"
  alert_faction_generate_wargoal_instant: "§HThere are faction members justifying war goals§!"
@@ -103,7 +106,7 @@
  alert_air_wings_unassigned_instant: "§HAir wings with no mission or region assigned§!"
  alert_air_wings_unassigned_delayed: "We have unused air wings in our airbases."
  alert_unassigned_divisions_instant: "§HUnassigned divisions§!"
- alert_unassigned_divisions_delayed:2 "We have some divisions not assigned to any command group.\n\n§GClick to select next unassigned division\nShift+Click to select all unassigned divisions§!"
+ alert_unassigned_divisions_delayed: "We have some divisions not assigned to any command group.\n\n§GClick to select next unassigned division\nShift+Click to select all unassigned divisions§!"
  alert_players_lagging_behind_title: "§HPlayers Lagging behind§!"
  alert_players_lagging_behind_desc: "\nThe host may reduce the game speed automatically until the following players catch up:"
  alert_players_lagging_behind_desc_entry: "\n - $PLAYER|H$ is $HOURS|R$ hours behind."
@@ -132,7 +135,7 @@
  alert_paused_diplomatic_actions_instant: "§HDiplomatic actions can't progress§!"
  alert_paused_diplomatic_actions_delayed: "Some of your diplomatic actions can't progress because you lack Legislative Power.\nConsider canceling these actions so they don't affect your Legislative Power gain.\n\nAffected relations:\n$COUNTRIES$"
  alert_resistance_instant: "§HResistance to occupation!§!"
- alert_resistance_delayed: "High levels of resistance in:\n$LIST|H$"
+ alert_resistance_delayed_high_resistance_list: "§HHigh levels of resistance in:§!"
  alert_resistance_delayed_countries: "§HCountries:§!"
  alert_resistance_delayed_states: "§HStates:§!"
  alert_outdated_equipment_instant: "§HOutdated equipment in production§!"
@@ -178,12 +181,10 @@
  ALERT_PRIORITY_NORMAL: "Normal"
  ALERT_PRIORITY_HIGH: "§GHigh§!"
  ALERT_PRIORITY_DETAILS: "Fleets on high alert priority will report their alerts along with other global alerts."
- 
  ALERT_RIGHTCLICK_DISMISS_CURRENT_SPOTTERS: "§GRight-click to dismiss current spottings§!"
  ALERT_LEFTCLICK_TOGGLE_SPOTTER: "§GLeft-click to toggle between spottings§!"
  ALERT_SPOTTER_INFO: "There are $NUM|H$ new spottings in the regions by the fleets that are marked as important."
  ALERT_SPOTTER_INFO_REGION: "There are $NUM|H$ new spottings in this region."
- 
  ALERT_NO_CRYPTO_IS_BEING_DECRYPTED_TOOLTIP: "§RNo enemy cipher is being decrypted.§!"
  ALERT_NO_CRYPTO_IS_BEING_DECRYPTED_TOOLTIP_DELAYED: "§GLeft-click§! to open cryptology window."
  ALERT_ENEMY_CRYPTO_IS_BROKEN_TOOLTIP: "You have successfully decrypted the cipher of following countries:"
@@ -200,3 +201,19 @@
  alert_officer_corps_instant: "§YModify Officer Corps§!"
  alert_officer_corps_spirit_delayed: "Military Spirits:\nYou can select a:\n$SPIRIT|Y$"
  alert_officer_corps_advisor_delayed: "Advisors:\nYou can select a:\n$ADVISOR|Y$\n"
+ alert_raid_available_instant: "§YRaids available§!"
+ alert_raid_available_delayed_header: "The following raids can be created:"
+ alert_raid_available_delayed_entry: "  $RAID_TYPE|Y$"
+ alert_raid_launchable_instant: "§YRaids ready to launch§!"
+ alert_raid_launchable_delayed_header: "The following raids are ready to launch:"
+ alert_raid_launchable_delayed_entry: "  $RAID|Y$"
+ alert_raid_detected_instant: "§YIncoming Raids Detected§!"
+ alert_raid_detected_delayed_header: "Raid plans have been intercepted:"
+ alert_raid_detected_delayed_entry: " $COUNTRY$ $RAID|Y$"
+ alert_raid_completed_instant: "§YRaids Completed§!"
+ alert_raid_completed_delayed_header: ""
+ alert_raid_completed_delayed_entry: "We have completed $RAID_TYPE_NAME|H$ on $TARGET_NAME$. The raid ended in $OUTCOME$."
+ alert_got_raided_instant: "§YEnemy Raids Executed§!"
+ alert_got_raided_delayed_header: ""
+ alert_got_raided_delayed_entry: "$TARGET_NAME$ got hit by $RAID_TYPE_NAME|H$. The raid ended in $OUTCOME$."
+ 
